--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="row">
-                <div class="col-xs-6">
-                </div>
-                <div class="col-xs-6">
+                <div class="navbar">
+                  <div class="col-xs-6">
+                    <a class="linknav start" href="#">START BOOTSTRAP</a>
+                  </div>
+                  <div class="col-xs-6">
+                    <ul id="tabellanavbar">
+                      <li class="difianco"><a class="linknav" href="#">PORTFOLIO</a></li>
+                      <li class="difianco"><a class="linknav" href="#">ABOUT</a></li>
+                      <li class="difianco"><a class="linknav" href="#">CONTACT</a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
@@ -28,10 +36,17 @@
       </nav>
       <!--navbar fixerd-->
       <!--jumbotron-->
-      <section class="sfondoverde" id="margine">
+      <section class="sfondoverde distanze" id="margine">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
+              <div class="centro">
+                <img class="imgjumbotron" src="https://www.tgscloud.it/storage/default/user-default.png" alt="">
+                <h1>STAR BOOTSTRAP</h1>
+                <hr>
+                <h3>Web Developer - Graphic Artist - User Experience Designer</h3>
+              </div>
+
             </div>
           </div>
         </div>
@@ -43,32 +58,38 @@
     <main>
 
       <!--parte 6 figure-->
-      <section>
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
+      <section class="distanze">
+
+        <section>
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12">
+                <h3 class="centro">PORTFOLIO</h3>
+              </div>
             </div>
           </div>
-        </div>
+        </section>
+
+        <section>
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12 col-sm-6 col-lg-4 ">
+              </div>
+              <div class="col-xs-12 col-sm-6 col-lg-4 ">
+              </div>
+              <div class="col-xs-12 col-sm-6 col-lg-4 ">
+              </div>
+              <div class="col-xs-12 col-sm-6 col-lg-4 ">
+              </div>
+              <div class="col-xs-12 col-sm-6 col-lg-4 ">
+              </div>
+              <div class="col-xs-12 col-sm-6 col-lg-4 ">
+            </div>
+          </div>
+        </section>
+
       </section>
 
-      <section>
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-sm-6 col-lg-4 ">
-            </div>
-            <div class="col-xs-12 col-sm-6 col-lg-4 ">
-            </div>
-            <div class="col-xs-12 col-sm-6 col-lg-4 ">
-            </div>
-            <div class="col-xs-12 col-sm-6 col-lg-4 ">
-            </div>
-            <div class="col-xs-12 col-sm-6 col-lg-4 ">
-            </div>
-            <div class="col-xs-12 col-sm-6 col-lg-4 ">
-          </div>
-        </div>
-      </section>
       <!--parte 6 figure-->
 
       <!--parte verde-->
@@ -130,7 +151,7 @@
         </div>
       </section>
       <!--p.iva-->
-      
+
     </footer>
 
   </body>
