--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start bootstrap</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/master.css">
   </head>
@@ -14,24 +15,20 @@
       <!--navbar fixerd-->
       <nav id="sfondofisso">
         <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
               <div class="row">
                 <div class="navbar">
                   <div class="col-xs-6">
-                    <a class="linknav start" href="#">START BOOTSTRAP</a>
+                    <a class="link start" href="#">START BOOTSTRAP</a>
                   </div>
                   <div class="col-xs-6">
                     <ul id="tabellanavbar">
-                      <li class="difianco"><a class="linknav" href="#">PORTFOLIO</a></li>
-                      <li class="difianco"><a class="linknav" href="#">ABOUT</a></li>
-                      <li class="difianco"><a class="linknav" href="#">CONTACT</a></li>
+                      <li class="difianco"><a class="link" href="#">PORTFOLIO</a></li>
+                      <li class="difianco"><a class="link" href="#">ABOUT</a></li>
+                      <li class="difianco"><a class="link" href="#">CONTACT</a></li>
                     </ul>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
         </div>
       </nav>
       <!--navbar fixerd-->
@@ -41,12 +38,13 @@
           <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
               <div class="centro">
-                <img class="imgjumbotron" src="https://www.tgscloud.it/storage/default/user-default.png" alt="">
+                <img class="imgjumbotron" src="https://blackrockdigital.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="">
                 <h1>STAR BOOTSTRAP</h1>
-                <hr>
-                <h3>Web Developer - Graphic Artist - User Experience Designer</h3>
+                <div class="stellina">
+                  <hr class="linee lineebianche"><i class="fas fa-star"></i><hr class="linee lineebianche">
+                </div>
+                <p>WEB DEVELOPER - GRAPHIC ARTIST - USER EXPIRIENCE DESIGNER</p>
               </div>
-
             </div>
           </div>
         </div>
@@ -64,7 +62,12 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <h3 class="centro">PORTFOLIO</h3>
+                <div class="centro">
+                  <h3 class="blu">PORTFOLIO</h3>
+                  <div class="stellina blu">
+                    <hr class="linee blu"><i class="fas fa-star"></i><hr class="linee blu">
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -74,16 +77,34 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                <div class="marginiblocchi">
+                  <img class="img6" src="https://blackrockdigital.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png" alt="">
+                </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                <div class="marginiblocchi">
+                  <img class="img6" src="https://blackrockdigital.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png" alt="">
+                </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                <div class="marginiblocchi">
+                 <img class="img6" src="https://blackrockdigital.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png" alt="">
+                </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                <div class="marginiblocchi">
+                 <img class="img6" src="https://blackrockdigital.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png" alt="">
+                </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                <div class="marginiblocchi">
+                 <img class="img6" src="https://blackrockdigital.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png" alt="">
+                </div>
               </div>
               <div class="col-xs-12 col-sm-6 col-lg-4 ">
+                <div class="marginiblocchi">
+                 <img class="img6" src="https://blackrockdigital.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png" alt="">
+                </div>
             </div>
           </div>
         </section>
@@ -93,16 +114,27 @@
       <!--parte 6 figure-->
 
       <!--parte verde-->
-      <section class="sfondoverde">
+      <section class="sfondoverde distanze">
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
+              <div class="centro">
+                <h3>ABOUT</h3>
+                <div class="stellina">
+                  <hr class="linee lineebianche"><i class="fas fa-star"></i><hr class="linee lineebianche">
+                </div>
+              </div>
             </div>
-            <div class="col-xs-12 col-sm-5 col-sm-offset-1 col-lg-4 col-lg-offset-2">
+            <div class="col-xs-12 col-lg-4 col-lg-offset-2">
+              <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
             </div>
-            <div class="col-xs-12 col-sm-5 col-lg-4">
+            <div class="col-xs-12 col-lg-4">
+              <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
             </div>
             <div class="col-xs-12">
+              <div class="centro">
+                <button class="btn btn-default btndownload" type="submit"><i class="fas fa-download"></i> Free Download !</button>
+              </div>
             </div>
           </div>
         </div>
@@ -110,12 +142,33 @@
       <!--parte verde-->
 
       <!--form-->
-      <section>
+      <section class="distanze" id="contatti">
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
+              <div class="centro">
+                <h3 class="blu">CONTACT ME</h3>
+                <div class="stellina blu">
+                  <hr class="linee blu "><i class="fas fa-star"></i><hr class="linee blu">
+                </div>
+              </div>
             </div>
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
+              <form class="distanze">
+                <div class="form-group">
+                  <input type="Name" class="form-control" placeholder="Name">
+                </div>
+                <div class="form-group">
+                  <input type="email" class="form-control" placeholder="Email address">
+                </div>
+                <div class="form-group">
+                  <input type="Phone number" class="form-control" placeholder="Phone number">
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" rows="5" placeholder="Message"></textarea>
+                </div>
+                <button type="submit" class="btn btn-default btnform">Send</button>
+              </form>
             </div>
           </div>
         </div>
@@ -127,14 +180,37 @@
     <footer>
 
       <!--contatti-->
-      <section class="sfondoblu">
+      <section class="sfondoblu bianco distanze">
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-4 col-lg-offset-0 ">
+              <div class="centro">
+                <h4>LOCATION</h4>
+                <span>2215 John Daniel Drive Clark, MO 54243</span>
+              </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-4 col-lg-offset-0">
+              <div class="centro">
+                <h4>AROUND THE WEB</h4>
+                <div class="bordo">
+                  <a class="link" href="#"><i class="fab fa-facebook-f"></i></a>
+                </div>
+                <div class="bordo bordogp">
+                  <a class="link" href="#"><i class="fab fa-google-plus-g"></i></a>
+                </div>
+                <div class="bordo bordotw">
+                  <a class="link" href="#"><i class="fab fa-twitter"></i></a>
+                </div>
+                <div class="bordo bordoin">
+                  <a class="link" href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+              </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-4 col-lg-offset-0">
+              <div class="centro">
+                <h4>ABOUT FREELANCER</h4>
+                <span>Freelance is a free to use, open source Bootstrap theme created by </span><span><a class="linknav" href="#">Start Bootstrap</a></span><span>.</span>
+              </div>
             </div>
           </div>
         </div>
@@ -146,6 +222,9 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
+              <div class="centro bianco">
+                <h5>Copyright © Your Website 2019</h5>
+              </div>
             </div>
           </div>
         </div>
