--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/master.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -17,16 +19,28 @@
         <div class="container">
               <div class="row">
                 <div class="navbar">
-                  <div class="col-xs-6">
-                    <a class="link start" href="#">START BOOTSTRAP</a>
-                  </div>
-                  <div class="col-xs-6">
-                    <ul id="tabellanavbar">
-                      <li class="difianco"><a class="link" href="#">PORTFOLIO</a></li>
-                      <li class="difianco"><a class="link" href="#">ABOUT</a></li>
-                      <li class="difianco"><a class="link" href="#">CONTACT</a></li>
-                    </ul>
-                  </div>
+                  <nav class="navbar navbar-default">
+    								  <div class="container-fluid">
+    								    <!-- Brand and toggle get grouped for better mobile display -->
+    								    <div class="navbar-header">
+    								      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    								        <span class="sr-only">Toggle navigation</span>
+    								        <span>MENU <i class="fas fa-bars"></i></span>
+
+    								      </button>
+    								      <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+    								    </div>
+
+    								    <!-- Collect the nav links, forms, and other content for toggling -->
+    								    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    								      <ul class="nav navbar-nav navbar-right">
+    								        <li><a href="#">PORTFOLIO</a></li>
+    								        <li><a href="#">ABOUT</a></li>
+    												<li><a href="#">CONTACT</a></li>
+    								      </ul>
+    								    </div><!-- /.navbar-collapse -->
+    								  </div><!-- /.container-fluid -->
+    								</nav>
                 </div>
               </div>
         </div>
