--- a/index.html
+++ b/index.html
@@ -207,24 +207,24 @@
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-4 col-lg-offset-0">
               <div class="centro">
                 <h4>AROUND THE WEB</h4>
-                <div class="bordo">
-                  <a class="link" href="#"><i class="fab fa-facebook-f"></i></a>
+                <div class="bordo hovericon">
+                  <a class="bianco" href="#"><i class="fab fa-facebook-f"></i></a>
                 </div>
-                <div class="bordo bordogp">
-                  <a class="link" href="#"><i class="fab fa-google-plus-g"></i></a>
+                <div class="bordo bordogp hovericon">
+                  <a class="bianco" href="#"><i class="fab fa-google-plus-g"></i></a>
                 </div>
-                <div class="bordo bordotw">
-                  <a class="link" href="#"><i class="fab fa-twitter"></i></a>
+                <div class="bordo bordotw hovericon">
+                  <a class="bianco" href="#"><i class="fab fa-twitter"></i></a>
                 </div>
-                <div class="bordo bordoin">
-                  <a class="link" href="#"><i class="fab fa-linkedin-in"></i></a>
+                <div class="bordo bordoin hovericon">
+                  <a class="bianco" href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
               </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-lg-4 col-lg-offset-0">
               <div class="centro">
                 <h4>ABOUT FREELANCER</h4>
-                <span>Freelance is a free to use, open source Bootstrap theme created by </span><span><a class="linknav" href="#">Start Bootstrap</a></span><span>.</span>
+                <span>Freelance is a free to use, open source Bootstrap theme created by </span><span><a class="linkfooter" href="#">Start Bootstrap</a></span><span>.</span>
               </div>
             </div>
           </div>
